[package]
name = "nginx-config-parser"
version = "0.1.0"
edition = "2021"
authors = ["Semubico"]
description = "A naive implementation of a very basic nginx config parser based on logos lexer. Returns generic string-typed AST. Production-unready"
license = "MIT"
homepage = "https://git.protogen.engineering/semubico/nginx-config-parser"

[lib]
name = "nginx-config-parser"
path = "src/lib.rs"

[dependencies]
logos = "0.15.0"
